OnlineLibrarySystem/Content/css/site.css
html, body {
    min-height: 100%;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

.ng-cloak {
    visibility: hidden !important;
}

.flex-1 {
    flex: 1;
}

.w-50px {
    width: 50px;
}

.w-100px {
    width: 100px;
}

.w-150px {
    width: 150px;
}

.w-200px {
    width: 200px;
}

.w-250px {
    width: 250px;
}

.w-300px {
    width: 300px;
}

.w-350px {
    width: 350px;
}

.w-400px {
    width: 400px;
}

.w-450px {
    width: 450px;
}

.w-500px {
    width: 500px;
}

.minw-0 {
    min-width: 0px !important;
}

.minw-0-r, .minw-0-r * {
    min-width: 0px !important;
}

.minh-0 {
    min-height: 0px !important;
}

.minh-0-r, .minh-0-r * {
    min-height: 0px !important;
}

.overflow-x-auto {
    overflow-x: auto !important;
}

.overflow-x-hidden {
    overflow-x: hidden !important;
}

.overflow-y-visible {
    overflow-y: visible !important;
}

.overflow-y-auto {
    overflow-y: auto !important;
}

.overflow-y-hidden {
    overflow-y: hidden !important;
}

.overflow-y-visible {
    overflow-y: visible;
}

.btn-link {
    color: #0000EE !important;
}

    .btn-link:hover {
        text-decoration: underline !important;
    }

* {
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
}

/* BOOTSTRAP EXTENSION */

@media (min-width: 1600px) {
    .container {
        max-width: 1480px;
    }
}

.dropdown-menu {
    position: absolute !important;
}

.badge {
    cursor: pointer;
}

.hidden {
    display: none !important;
}

/* IE10+ CSS styles go here */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    body > footer.footer {
        visibility: hidden;
    }
}

.remove-outline, .remove-outline:focus {
    outline: none !important;
}

.oi-light {
    color: #f8f9fa;
}

.oi-dark {
    color: gray;
}

.oi-btn-outline-primary {
    color: #007bff;
}

.btn:hover .oi-btn-outline-primary {
    color: white;
}

.oi-btn-outline-danger {
    color: #dc3545;
}

.btn:hover .oi-btn-outline-danger {
    color: white;
}

.pointer {
    cursor: pointer;
}

.control-xs {
    width: 40px;
    padding: 2px;
    border: none;
    background: none;
    border-bottom: 1px solid gray;
    outline: none;
    text-align: center;
}

    .control-xs:active {
        border: none;
        transition: border .5s ease-out;
    }

    .control-xs:focus {
        outline: none;
        transition: border .5s ease-out;
        border-bottom: 1px solid blue;
    }

.btn-borderless {
    background: none !important;
    border: none !important;
    outline: none !important;
    transition: all .5s ease-out;
}

    .btn-borderless:focus {
        outline: none !important;
        border: none !important;
        transition: all .5s ease-out;
    }

    .btn-borderless:active {
        background-color: gray !important;
        outline: none !important;
        border: none !important;
        color: white !important;
        transition: all .5s ease-out;
    }

